<resources xmlns:android="http://schemas.android.com/apk/res/android"

    >
    <string name="app_name">Sách Giáo Lý Công Giáo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="so_cap_I">XƯNG TỘI và RƯỚC LỄ I</string>
    <string name="so_cap_II">XƯNG TỘI và RƯỚC LỄ II</string>
    <string name="so_cap_III">THÊM SỨC IV</string>
    <string name="can_ban_I">THÊM SỨC I</string>
    <string name="can_ban_II">THÊM SỨC II</string>
    <string name="can_ban_III">THÊM SỨC III</string>
    <string name="kinh_thanh_I">Kinh Thánh I</string>
    <string name="kinh_thanh_II">Kinh Thánh II</string>
    <string name="kinh_thanh_III">Kinh Thánh III</string>
    <string name="vao_doi_I">Vào Đời I</string>
    <string name="vao_doi_II">Vào Đời II</string>
    <string name="vao_doi_III">Vào Đời III</string>
    <string-array name="giao_ly_du_tong">
        <item>Hướng Dẫn Sử Dụng Sách Giáo Lý Dự Tòng</item>
        <item>Bài mở đầu : Tìm kiếm Thiên Chúa</item>
        <item>Bài 1 : Nhận Biết Thiên Chúa</item>
        <item>Bài 2 : Thiên Chúa Mặc Khải</item>
        <item>Bài 3 : Thiên Chúa Tạo Dựng</item>
        <item>Bài 4 : Con Người Sa Ngã</item>
        <item>Bài 5 : Thiên Chúa Làm Người</item>
        <item>Bài 6 : Tin Mừng Nước Trời</item>
        <item>Bài 7 : Chúa Giêsu Cứu Độ Nhân Loại</item>
        <item>Bài 8 : Chúa Giêsu Ban Thánh Thần</item>
        <item>Bài 9 : Mầu Nhiệm Chúa Ba Ngôi</item>
        <item>Bài 10 : Hội Thánh Truyền Giáo</item>
        <item>Bài 11 : Giáo Hội Việt Nam</item>
        <item>Bài 12 : Phụng Vụ và Bí Tích</item>
        <item>Bài 13 : Bí Tích Thánh Tẩy</item>
        <item>Bài 14 : Bí Tích Thêm Sức</item>
        <item>Bài 15 : Bí Tích Thánh Thể</item>
        <item>Bài 16 : Thánh Lễ Tạ Ơn</item>
        <item>Bài 17 : Lương Tâm Và Tội Lỗi</item>
        <item>Bài 18 : Bí Tích Hòa Giải</item>
        <item>Bài 19 : Xức Dầu Bệnh Nhân</item>
        <item>Bài 20 : Bí Tích Truyền Chức</item>
        <item>Bài 21 : Bí Tích Hôn Phối</item>
        <item>BÀI 22 : Mến Chúa Trên Hết</item>
        <item>BÀI 23 : Yêu Người Như Chính Mình</item>
        <item>BÀI 24 : Cầu Nguyện</item>
    </string-array>
    <string-array name="hon_nhan_gia_dinh">
        <item>  Bài 1: Ơn gọi hôn nhân trong chương trình của Thiên Chúa</item>
        <item>  Bài 2: Hôn nhân Công giáo </item>
        <item>  Bài 3: Giáo luật về Bí tích Hôn phối</item>
        <item>  Bài 4: Hôn nhân khác tôn giáo </item>
        <item>  Bài 5: Các thủ tục và nghi lễ Hôn phối</item>
        <item>  Bài 6: Sống thời kỳ đính hôn</item>
        <item>  Bài 7: Tình yêu vợ chồng</item>
        <item>  Bài 8: Tính dục và hôn nhân</item>
        <item>  Bài 9: Hoà hợp vợ chồng: Sự khác biệt giữa nam và nữ  </item>
        <item>  Bài 10: Hoà hợp vợ chồng: Triển nở trong tình yêu</item>
        <item>  Bài 11: Hoà hợp vợ chồng: Giải quyết những xung đột </item>
        <item>  Bài 12: Sự phân ly vợ chồng </item>
        <item>  Bài 13: Gia đình là Hội Thánh tại gia </item>
        <item>  Bài 14: Linh đạo hôn nhân và gia đình</item>
        <item>  Bài 15: Các bí tích trong đời sống Hôn nhân và gia đình  </item>
        <item>  Bài 16: Cầu nguyện trong gia đình </item>
        <item>  Bài 17: Sinh con có trách nhiệm</item>
        <item>  Bài 18: Giáo dục con cái </item>
        <item>  Bài 19: Đạo hiếu   </item>
        <item>  Bài 20: Những ngày lễ của gia đình </item>
        <item>  Bài 21: Gia đình và xã hội</item>
    </string-array>
    <string name="gioi_thieu">Giới Thiệu</string>
    <string-array name="stories_names">

        <item>Bài 1 : Chúa Giêsu Dạy Ta Biết Thiên Chúa Là Cha Yêu Thương</item>
        <item>Bài 2 : Thiên Chúa Là Cha</item>
        <item>Bài 3: Thiên Chúa Yêu Thương Chúng Ta, Tạo Nên Mọi Loài Mọi Vật</item>
        <item>Bài 4 : Thiên Chúa Yêu Thương Tạo Nên Loài Người</item>
        <item>Bài 5 : Thiên Thần và Ma Quỷ</item>
        <item>Bài 6 : Loài Người Phạm Tội và Thiên Chúa Hứa Ban Đấng Cứu Thế</item>
        <item>Bài 7 : Thiên Chúa Chọn Abraham</item>
        <item>Bài 8 : Thiên Chúa Lập Dân Israel Làm Dân Riêng Của Ngài</item>
        <item>Bài 9 : Giao ước Xi Nai</item>
        <item>Bài 10 : Chúa Giêsu Sinh Ra Bởi Đức Trinh Nữ Maria</item>
        <item>Bài 11 : Chúa Giêsu Là Gương Mẫu Cho Ta Trong Gia Đình, Ở Trường Học Và Nơi Lối Xóm</item>
        <item>Bài 12 : Chúa Giêsu Làm Việc</item>
        <item>Bài 13 : Chúa Giêsu Yêu Mến Quê Hương Dân Tộc</item>
        <item>Bài 14 : Chúa Giêsu Rao Giảng Tin Mừng Nước Trời</item>
        <item>Bài 15 : Chúa Giêsu Rất Quyền Phép</item>
        <item>Bài 16 : Chúa Giêsu Chọn Các Tông Đồ</item>
        <item>Bài 17 : Chúa Giêsu Là Thầy Dạy Ta</item>
        <item>Bài 18 : Chúa Giêsu Dạy Ta cầu Nguyện</item>
        <item>Bài 19 : Ta Cầu Nguyện Với Cha Trên Trời</item>
        <item>Bài 20 : Bữa Tiệc Ly</item>
        <item>Bài 21 : Chúa Giêsu Chết Trên Thánh Giá</item>
        <item>Bài 22 : Chúa Giêsu Sống Lại</item>
        <item>Bài 23 : Chúa Giêsu Cứu Chuộc Ta</item>
        <item>Bài 24 : Chúa Giêsu là Con Thiên Chúa</item>
        <item>Bài 25 : Chúa Giêsu Sẽ Trở Lại .Trong Vinh Quang</item>
        <item>Bài 26 : Chúa Cha và Chúa Giêsu Gởi Thánh Thần Đến Với Ta</item>
        <item>Bài 27 : Chúa Thánh Thần Làm Cho Ta Nên Con Cái Thiên Chúa</item>
        <item>Bài 28 : Chỉ Có Một Thiên Chúa Mà Thôi Là Chúa Cha, Chúa Con Và Chúa Thánh Thần (1/3)</item>
        <item>Bài 29 : Chỉ Có Một Thiên Chúa Mà Thôi Là Chúa Cha, Chúa Con Và Chúa Thánh Thần (2/3)</item>
        <item>Bài 30 : Chỉ Có Một Thiên Chúa Mà Thôi Là Chúa Cha, Chúa Con Và Chúa Thánh Thần (3/3)</item>
        <item>Bài 31 : Cầu Nguyện Cùng Ba Ngôi Thiên Chúa</item>
        <item>Bài 32 : Cầu Nguyện Sáng Tối Mỗi Ngày</item>
        <item>Lời Mở Đầu</item>
    </string-array>
    <string-array name="so_cap_2">

        <item>Bài 1: Hội Thánh là gia đình con cái Thiên Chúa</item>
        <item>Bài 2: Sống trong Hội Thánh Chúa</item>
        <item>Bài 3: Tổ  chức của Hội Thánh</item>
        <item>Bài 4: Cầu nguyện trong   Hội Thánh</item>
        <item>Bài 5: Đức Maria, Mẹ của Chúa Giêsu</item>
        <item>Bài 6: Đức Maria, Mẹ Hội Thánh và Mẹ chúng ta</item>
        <item>Bài 7: Cầu nguyện  với Mẹ Maria</item>
        <item>Bài 8: Chết và phán xét</item>
        <item>Bài 9: Cuộc sống đời sau</item>
        <item>Bài 10: Trời mới đất mới</item>
        <item>Bài 11: Sống xứng đáng là con cái Thiên Chúa</item>
        <item>Bài 12: Tội lỗi làm ta xa Thiên Chúa (1)</item>
        <item>Bài 13: Tội lỗi làm ta xa Thiên Chúa (2)</item>
        <item>Bài 14: Sống theo luật Chúa dậy</item>
        <item>Bài 15: Kính mến Thiên Chúa trên hết mọi sự</item>
        <item>Bài 16: Yêu mến mọi người như chính bản thân ta</item>
        <item>Bài 17: Học các nhân đức của Chúa Giêsu 1</item>
        <item>Bài 18: Tám mối phúc thật</item>
        <item>Bài 19: Sáu điều răn Hội Thánh</item>
        <item>Bài 20: Sống ngày Chúa Nhật</item>
        <item>Bài 21: Bí tích nơi gặp gỡ Thiên Chúa</item>
        <item>Bài 22: Bí tích rửa tội cho ta được làm con Thiên Chúa</item>
        <item>Bài 23: Chúa Giêsu là Bánh Hằng Sống nuôi dưỡng linh hồn ta</item>
        <item>Bài 24: Chúa Giêsu đến với ta trong Thánh Lễ </item>
        <item>Bài 25: Chúa Giêsu muốn ngự vào lòng ta</item>
        <item>Bài 26: Chúa Giêsu mời ta đón rước Ngài (1)</item>
        <item>Bài 27: Chúa Giêsu mời ta đón rước Ngài (2)</item>
        <item>Bài 28: Chúa Giêsu lập bí tích giải tội</item>
        <item>Bài 29: Chúa Giêsu tha tội cho ta</item>
        <item>Bài 30: Dọn mình xưng tội (1)</item>
        <item>Bài 31: Dọn mình xưng tội (2)</item>
        <item>Bài 32: Cách xưng tội (1)</item>
        <item>Bài 33: Cách xưng tội (2)</item>
        <item>Lời ngỏ cùng giáo lý viên  </item>
    </string-array>
    <string-array name="so_cap_3">
        <item>Lời mở đầu</item>
        <item>Bài 1: Hội Thánh thờ phượng Thiên Chúa (1)</item>
        <item>Bài 2: Hội Thánh thờ phượng Thiên Chúa (2)</item>
        <item>Bài 3: Hội Thánh thờ phượng Thiên Chúa (3)</item>
        <item>Bài 4: Linh Lạy Cha</item>
        <item>Bài 5: Luyện tính tốt 1 : Quan tâm đến người khác</item>
        <item>Bài 6: Lạy Cha chúng con ở trên trời</item>
        <item>Bài 7: Bảy lời cầu xin (1)</item>
        <item>Bài 8: Bảy lời cầu xin (2)</item>
        <item>Bài 9: Luyện tính tốt 2: Đứng vững trong điều tốt</item>
        <item>Bài 10: Các bí tích (1)</item>
        <item>Bài 11: Các bí tích (2)</item>
        <item>Bài 12: Bí tích rửa tội (1)</item>
        <item>Bài 13: Bí tích rửa tội (2)</item>
        <item>Bài 14: Bí tích thêm sức: Ghi ấn tín ơn Chúa Thánh Thần</item>
        <item>Bài 15: Bí tích thêm sức làm cho ta nên nhân chứng Chúa Kitô</item>
        <item>Bài 16: Luyện tính tốt 3:Tôn trọng mọi người và khiêm nhường lắng nghe </item>
        <item>Bài 17: Chúa Giêsu lập bí tích Thánh Thể </item>
        <item>Bài 18: Chúng ta cử hành Thánh lễ</item>
        <item>Bài 19: Sống với Chúa Kitô Thánh Thể   </item>
        <item>Bài 20: Chúa Giêsu lập bí tích giao hoà </item>
        <item>Bài 21: Xét mình và ăn năn tội</item>
        <item>Bài 22: Việc xưng tội</item>
        <item>Bài 23: Đền tội và ân xá</item>
        <item>Bài 24: Bí tích xức dầu bệnh nhân </item>
        <item>Bài 25: Bí tích truyền chức thánh</item>
        <item>Bài 26: Bí tích hôn phối</item>
        <item>Bài 27: Gia đình là Hội Thánh nhỏ</item>
        <item>Bài 28: Các phụ tích (Á bí tích)</item>
        <item>Bài 29: Hội Thánh tỉnh thức cầu nguyện</item>
        <item>Bài 30: Chết và phán xét</item>
        <item>Bài 31: Xác sống lại và sự thưởng phạt đời đời </item>
        <item>Bài 32:Phán xét chung và trời mới đất mới</item>


    </string-array>
</resources>